[gd_scene load_steps=6 format=3 uid="uid://cbf7cplmttc45"]

[ext_resource type="Script" path="res://Main Menu.gd" id="1_ee43w"]
[ext_resource type="Texture2D" uid="uid://dx77ymclnfche" path="res://Menu_Scenes/Images For Menus/Rambo Russian Rampage.png" id="2_txtr2"]
[ext_resource type="FontFile" uid="uid://cth4sjrky3sxu" path="res://Assets_and_textures/Fonts/SingleDay-Regular.ttf" id="3_db443"]
[ext_resource type="AudioStream" uid="uid://crltv15p50qof" path="res://Music/Russia National anthem.mp3" id="4_ycaf2"]

[sub_resource type="Theme" id="Theme_fbgg7"]
default_font = ExtResource("3_db443")
default_font_size = 72

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ee43w")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_txtr2")

[node name="Main_Menu_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ycaf2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -607.0
offset_right = 106.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.3, 1.3)
theme_override_constants/separation = 20

[node name="Play Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fbgg7")
text = "Play
"

[node name="Options Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fbgg7")
text = "Options"

[node name="Credits Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fbgg7")
text = "Credits
"

[node name="Quit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fbgg7")
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
